# Rust-Movie-Collection

./: .env  .gitignore  Cargo.toml  Shuttle.toml
api/config/: Cargo.toml
api/config/src/: main.rs
api/config/src/docs/: api_docs.rs  mod.rs
api/lib/: Cargo.toml
api/lib/src/: health.rs  lib.rs  movies.rs  version.rs
api/lib/src/db/: postgres.rs
api/lib/src/middleware/: auth_middleware.rs
api/lib/src/repositories/: base_repository.rs  mod.rs  movie.rs  movie_repo.rs  movie_repository.rs  review_repository.rs  user_password_repository.rs  user_repository.rs  user_session_repository.rs  version.rs  version_repository.rs
api/lib/src/repositories/postgres/: mod.rs  pg_movie_repo.rs  pg_version_repo.rs
api/lib/src/routers/: health.rs  health_router.rs  mod.rs  movies.rs  movies_router.rs  review_router.rs  token_router.rs  user_router.rs  version.rs  version_router.rs
api/lib/src/services/: health.rs  mod.rs  movie.rs  movie_service.rs  movies.rs  review_service.rs  user_service.rs  version.rs  version_service.rs
api/lib/src/utils/: auth.rs  db.rs  error.rs  json.rs  message.rs  mod.rs
api/migrations/postgres/: schema.sql
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs
api/tests/: Cargo.toml
api/tests/src/: health_test.rs  lib.rs  movies_test.rs  version_test.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240218_000001_enable_uuid.rs  m20241020_174338_create_movie_table.rs  m20241026_112821_create_user_table.rs  m20241026_123354_create_update_at_function.rs  m20241026_123923_create_user_password_table.rs  m20250226_210136_create_review_table.rs  m20250301_070557_create_user_session_table.rs
notebooks/: Cargo.toml  analysis.ipynb  imbd.ipynb
notebooks/src/: main.rs
shared/: Cargo.toml
shared/src/entities/: mod.rs  movie.rs  prelude.rs  review.rs  user.rs  user_password.rs  user_session.rs
shared/src/models/: mod.rs  movie.rs  review.rs  user.rs  user_password.rs  user_session.rs  version.rs
ui/: next.config.ts  package-lock.json
ui/src/app/: page.tsx
