[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
    "uuid",
    "chrono",
    "json",
    "derive",
] }
serde = { version = "1.0", features = ["derive"] }
# docs
apistos = { version = "0.4.1", features = ["extras", "qs_query"] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
utoipa = { version = "= 3.0.2", features = ["actix_extras"] }