[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.0.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
serde = { version = "1.0", features = ["derive"] }
# docs
apistos = { version = "0.4.1", features = ["extras", "qs_query"] }
schemars = { package = "apistos-schemars", version = "0.8", features = [
    "chrono",
    "uuid1",
    "url",
    "rust_decimal",
] }
utoipa = { version = "= 3.3.0", features = ["actix_extras"] }
num-traits = "0.2.19"
