[package]
name = "drip-rust-movie-collection"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
tracing = "0.1"

# database
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", default-features = false, features = [
    "tls-native-tls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# lib
api-lib = { path = "../lib" }
shared = { path = "../../shared" }

# docs

utoipa = { version = "= 3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "= 2.0.1", features = ["actix-web"] }