[package]
name = "drip-rust-movie-collection"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
tracing = "0.1"

# database
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid" ] }

# lib
api-lib = { path = "../lib" }
shared = { path = "../../shared" }

# docs

utoipa = { version = "= 3.0.2", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "= 2.0.1", features = ["actix-web"] }