[package]
name = "api-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
# actix
actix-web = "4.9.0"
# database
sea-orm = { version = "1.1", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-json", "with-uuid" ] }

# authentication
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"

# tracing
tracing = "0.1"
actix-rt = "2.5.0"
async-trait = "0.1.83"
shared = { path = "../../shared" }
serde = { version = "1.0", features = ["derive"] }

# docs
serde_json = "1.0.70"
utoipa = { version = "= 3.0.2", features = ["actix_extras"] }

# error
thiserror = "1.0.29"   
chrono = "0.4.39"
