[package]
name = "api-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.5.0"
async-trait = "0.1.83"

sqlx = { version = "0.8.2", default-features = false, features = [
    "uuid",
    "chrono",
    "json",
    "derive",
] }

api-lib = { path = "../lib" }
shared = {path="../../shared"}